# panoramyx

./: .gitignore  .gitlab-ci.yml  .gitmodules  AbstractCubeGenerator_8hpp.html  AbstractHypergraphDecompositionSolver_8hpp.html  AbstractParallelSolver_8hpp.html  AbstractProblemUnderAssumptionCubeGenerator_8hpp.html  AbstractSolverBuilder_8hpp.html  AggressiveRangeBaseAllocationStrategy_8hpp.html  AggressiveRangeBasedAllocationStrategy_8hpp.html  AllInterval.xml  BlockingDeque_8hpp.html  CMakeLists.txt  CartesianProductIterativeRefinementCubeGenerator_8hpp.html  Configuration_8hpp.html  EPSSolverBuilder_8hpp.html  EPSSolver_8hpp.html  EpsSolverBuilder_8hpp.html  FinalConsistencyChecker_8hpp.html  GauloisPartitionSolver_8hpp.html  GauloisSolver_8hpp.html  Hyperedge_8hpp.html  HypergraphBuilder_8hpp.html  HypergraphDecompositionCubeGenerator_8hpp.html  Hypergraph_8hpp.html  IAllocationStrategy_8hpp.html  IBoundAllocationStrategy_8hpp.html  IConsistencyChecker_8hpp.html  ICubeGenerator_8hpp.html  IDecompositionStrategy_8hpp.html  IHypergraphDecompositionSolver_8hpp.html  INetworkCommunication_8hpp.html  ISolverConfigurationStrategy_8hpp.html  KahyparDecompositionSolver_8hpp.html  LexicographicCubeGenerator_8hpp.html  LexicographicIntervalCubeGenerator_8hpp.html  LinearRangeIterator_8hpp.html  LogarithmicRangeIterator_8hpp.html  MPINetworkCommunication_8hpp.html  MessageBuilder_8hpp.html  (+109 more)
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
doc/: CMakeLists.txt  Doxyfile.in
example/: main.cpp
include/crillab-panoramyx/core/: Configuration.hpp  FinalConsistencyChecker.hpp  IConsistencyChecker.hpp  IDecompositionStrategy.hpp  ISolverConfigurationStrategy.hpp  NullConsistencyChecker.hpp  PartialConsistencyChecker.hpp  panoramyx.hpp
include/crillab-panoramyx/decomposition/: AbstractCubeGenerator.hpp  AbstractHypergraphDecompositionSolver.hpp  AbstractProblemUnderAssumptionCubeGenerator.hpp  CartesianProductIterativeRefinementCubeGenerator.hpp  HypergraphDecompositionCubeGenerator.hpp  IHypergraphDecompositionSolver.hpp  KahyparDecompositionSolver.hpp  LexicographicIntervalCubeGenerator.hpp  ProblemUnderAssumption.hpp  StreamLexicographicCube.hpp  StreamLexicographicIntervalCube.hpp  StreamPriorityQueueAdapter.hpp
include/crillab-panoramyx/network/: INetworkCommunication.hpp  MPINetworkCommunication.hpp  Message.hpp  MessageBuilder.hpp  NetworkCommunicationFactory.hpp  ThreadCommunication.hpp
include/crillab-panoramyx/problem/: RemoteConstraint.hpp
include/crillab-panoramyx/solver/: AbstractParallelSolver.hpp  AbstractSolverBuilder.hpp  EPSSolver.hpp  EPSSolverBuilder.hpp  GauloisPartitionSolver.hpp  GauloisSolver.hpp  ICubeGenerator.hpp  PanoramyxSolver.hpp  PartitionSolver.hpp  PortfolioSolver.hpp  PortfolioSolverBuilder.hpp  RemoteSolver.hpp
include/crillab-panoramyx/utils/: BlockingDeque.hpp  ScopeIntensionConstraintVisitor.hpp  Stream.hpp
libs/: CMakeLists.txt
panoramyx/: AllInterval-006.xml  AllInterval-006.xml.lzma
panoramyx/include/core/: Configuration.hpp  FinalConsistencyChecker.hpp  IConsistencyChecker.hpp  IDecompositionStrategy.hpp  ISolverConfigurationStrategy.hpp  NullConsistencyChecker.hpp  PartialConsistencyChecker.hpp  panoramyx.hpp
panoramyx/include/decomposition/: AbstractCubeGenerator.hpp  CartesianProductIterativeRefinementCubeGenerator.hpp  LexicographicCubeGenerator.hpp  NullDecompositionStrategy.hpp  ProblemUnderAssumption.hpp  StreamLexicographicCube.hpp
panoramyx/include/network/: INetworkCommunication.hpp  MPINetworkCommunication.hpp  Message.hpp  MessageBuilder.hpp  MpiNetworkCommunication.hpp  NetworkCommunicationFactory.hpp  NetworkTypes.hpp
panoramyx/include/solver/: AbstractParallelSolver.hpp  AbstractSolverBuilder.hpp  EPSSolver.hpp  EpsSolverBuilder.hpp  GauloisSolver.hpp  ICubeGenerator.hpp  PortfolioSolver.hpp  PortfolioSolverBuilder.hpp  RemoteSolver.hpp
panoramyx/include/utils/: BlockingDeque.hpp  Stream.hpp  VectorStream.hpp
panoramyx/src/: main.cpp
panoramyx/src/core/: Configuration.cpp  FinalConsistencyChecker.cpp  NullConsistencyChecker.cpp  PartialConsistencyChecker.cpp
panoramyx/src/decomposition/: AbstractCubeGenerator.cpp  AbstractProblemUnderAssumptionCubeGenerator.cpp  CartesianProductIterativeRefinementCubeGenerator.cpp  LexicographicCubeGenerator.cpp  NullDecompositionStrategy.cpp  ProblemUnderAssumption.cpp  StreamLexicographicCube.cpp  StreamPriorityQueueAdapter.cpp
panoramyx/src/network/: MPINetworkCommunication.cpp  MessageBuilder.cpp  MpiNetworkCommunication.cpp  NetworkCommunicationFactory.cpp  ThreadCommunication.cpp
panoramyx/src/solver/: AbstractParallelSolver.cpp  AbstractSolverBuilder.cpp  EPSSolver.cpp  EpsSolverBuilder.cpp  GauloisSolver.cpp  PortfolioSolver.cpp  PortfolioSolverBuilder.cpp  RemoteSolver.cpp
source/core/: FinalConsistencyChecker.cpp  NullConsistencyChecker.cpp  PartialConsistencyChecker.cpp
source/decomposition/: AbstractCubeGenerator.cpp  AbstractHypergraphDecompositionSolver.cpp  AbstractProblemUnderAssumptionCubeGenerator.cpp  CartesianProductIterativeRefinementCubeGenerator.cpp  HypergraphBuilder.cpp  HypergraphDecompositionCubeGenerator.cpp  KahyparDecompositionSolver.cpp  LexicographicCubeGenerator.cpp  LexicographicIntervalCubeGenerator.cpp  NullDecompositionStrategy.cpp  ProblemUnderAssumption.cpp  StreamLexicographicCube.cpp  StreamLexicographicIntervalCube.cpp  StreamPriorityQueueAdapter.cpp  UnweightedHyperedge.cpp  UnweightedHypergraph.cpp
source/network/: MPINetworkCommunication.cpp  MessageBuilder.cpp  NetworkCommunicationFactory.cpp  ThreadCommunication.cpp
source/optim/decomposition/: AggressiveRangeBaseAllocationStrategy.cpp  LinearRangeIterator.cpp  (+4 more)
source/problem/: RemoteConstraint.cpp
source/solver/: AbstractParallelSolver.cpp  AbstractSolverBuilder.cpp  EPSSolver.cpp  EPSSolverBuilder.cpp  EpsSolverBuilder.cpp  GauloisPartitionSolver.cpp  GauloisSolver.cpp  PartitionSolver.cpp  PortfolioSolver.cpp  PortfolioSolverBuilder.cpp  RemoteSolver.cpp
source/utils/: ScopeIntensionConstraintVisitor.cpp
(+21 files in other folders)
